<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NetworkActivity">

    <LinearLayout
        android:id="@+id/subnetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/titleCalc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:text="@string/ip4Address" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ipSubnetCalc"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/networkOct1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:baselineAligned="false"
                android:textSize="20dp"
                android:ems="5"
                android:hint="@string/ipPart1"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="3" />

            <TextView
                android:id="@+id/dot1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:baselineAligned="false"
                android:text="@string/dot"
                android:visibility="visible" />

            <EditText
                android:textSize="20dp"
                android:id="@+id/octet2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:baselineAligned="false"
                android:ems="5"
                android:hint="@string/ipPart2"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="3" />

            <TextView
                android:id="@+id/dot2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:baselineAligned="false"
                android:text="@string/dot" />

            <EditText
                android:textSize="20dp"
                android:id="@+id/octet3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:baselineAligned="false"
                android:ems="5"
                android:hint="@string/ipPart3"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="3" />

            <TextView
                android:id="@+id/dot3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:baselineAligned="false"
                android:text="@string/dot" />

            <EditText
                android:textSize="20dp"
                android:id="@+id/octet4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:baselineAligned="false"
                android:ems="10"
                android:hint="@string/ipPart4"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="3" />

            <TextView
                android:id="@+id/dot4"
                android:layout_width="5sp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:baselineAligned="false"
                android:text="@string/slash" />

            <EditText
                android:textSize="20dp"
                android:id="@+id/prefix"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:baselineAligned="false"
                android:ems="1"
                android:hint="@string/ipPart5"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="2" />
        </LinearLayout>

        <Button
            android:id="@+id/subnetCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculate" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/outputGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.29" />

    <TextView
        android:id="@+id/networkDecSpec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        android:visibility="invisible"
        android:text="@string/ipSpecs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/outputGuideline" />

    <TextView
        android:id="@+id/networkBinSpec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:visibility="invisible"
        android:text="@string/ipSpecs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/networkDecSpec" />

    <TextView
        android:id="@+id/networkDecOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/networkDecSpec"
        app:layout_constraintTop_toTopOf="@+id/outputGuideline" />

    <TextView
        android:id="@+id/networkBinOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/networkBinSpec"
        app:layout_constraintTop_toBottomOf="@+id/networkDecOut" />

</androidx.constraintlayout.widget.ConstraintLayout>